# is_variant

./: Cargo.toml
src/: error.rs  generics.rs  lib.rs
tests/: tests.rs
